--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-three/drei": "^9.0.1",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.166.0",
+    "expo": "^51.0.0",
+    "expo-asset": "~10.0.10",
+    "expo-gl": "~14.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "three": "^0.166.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
